任务管理优化

--- a/app/src/main/res/layout/activity_file_browser.xml
+++ b/app/src/main/res/layout/activity_file_browser.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".views.activity.FolderBrowseActivity">
+        tools:context=".views.activity.FileBrowserActivity">
 
         <View
             android:id="@+id/status_view"
