--- a/app/src/main/res/layout/item_upload_task_done.xml
+++ b/app/src/main/res/layout/item_upload_task_done.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/iv_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_round_file_video_24" />
@@ -39,7 +39,7 @@
                 android:ellipsize="end"
                 android:maxLines="3"
                 android:textColor="@color/colorOnSurface"
-                android:textSize="14sp"
+                android:textSize="13sp"
                 android:textStyle="bold"
                 tools:text="疾速追杀1.John.Wick.Chapter1.2014.Bluray.UHD.HDR.2160p.H265.10bit.AC3.5.1.mkv" />
 
@@ -64,9 +64,9 @@
                     android:id="@+id/tv_status"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:layout_weight="1"
                     android:textColor="@color/colorOnSurfaceMedium"
                     android:textSize="11sp"
                     tools:targetApi="m"
@@ -87,5 +87,35 @@
                     tools:text="0B / 9.3 GB" />
             </LinearLayout>
         </LinearLayout>
+
+        <Space
+            android:layout_width="8dp"
+            android:layout_height="4dp" />
+
+        <CheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            android:visibility="gone" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_control"
+            style="@style/MaterialButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="定位"
+            android:textSize="11sp"
+            app:cornerRadius="50dp"
+            app:icon="@drawable/ic_round_open_in_new_24"
+            app:iconGravity="textStart"
+            app:iconPadding="2dp"
+            app:iconSize="14dp"
+            app:iconTint="@color/colorSecondary" />
     </LinearLayout>
 </layout>
