--- a/app/src/main/res/layout/layout_default_state_error.xml
+++ b/app/src/main/res/layout/layout_default_state_error.xml
@@ -13,25 +13,25 @@
         android:src="@drawable/ic_error_cute_girl" />
 
     <TextView
-        android:id="@+id/tvMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:tag="msg"
         android:text="@string/state_view_something_went_wrong"
-        android:textColor="@color/material_on_surface_emphasis_medium"
-        android:textSize="14sp" />
+        android:textColor="@color/colorOnSurfaceMedium"
+        android:textSize="13sp" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnRetry"
         style="@style/MaterialButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minWidth="120dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
+        android:minHeight="0dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:tag="retry"
-        app:cornerRadius="60dp"
+        app:cornerRadius="50dp"
         android:text="@string/state_view_retry"
         android:textColor="@color/colorSecondary"
         android:textStyle="bold"
