--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -63,48 +63,20 @@
                     android:layout_marginStart="19dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
-                    android:text="@string/ip"
+                    android:text="@string/host"
                     android:textColor="@color/colorOnSurfaceMedium"
                     android:textSize="13sp" />
 
                 <com.jason.cloud.drive.views.widgets.DeletableEditText
-                    android:id="@+id/edit_ip"
+                    android:id="@+id/edit_host"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
-                    android:digits="0123456789."
-                    android:hint="192.168.0.*"
-                    android:imeOptions="actionSearch"
-                    android:minHeight="48dp"
-                    android:singleLine="true"
-                    android:textColor="@color/colorOnPrimary"
-                    android:textColorHint="@color/colorOnPrimaryMedium"
-                    android:textSize="14sp"
-                    app:clearButtonTint="@color/colorOnSurface" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="19dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:text="@string/port"
-                    android:textColor="@color/colorOnSurfaceMedium"
-                    android:textSize="13sp" />
-
-                <com.jason.cloud.drive.views.widgets.DeletableEditText
-                    android:id="@+id/edit_port"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="top"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:hint="默认端口 8820"
-                    android:imeOptions="actionSearch"
-                    android:inputType="number"
+                    android:hint="http://192.168.0.10:8080"
+                    android:imeOptions="actionNext"
                     android:minHeight="48dp"
                     android:singleLine="true"
                     android:textColor="@color/colorOnPrimary"
