--- a/app/src/main/res/layout/item_mounted_dir.xml
+++ b/app/src/main/res/layout/item_mounted_dir.xml
@@ -44,24 +44,6 @@
                     android:layout_height="0dp"
                     android:layout_weight="1" />
 
-                <ImageView
-                    android:layout_width="10dp"
-                    android:layout_height="10dp"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/shape_round_dot"
-                    app:tint="@color/storageDriveUsedTrackColor" />
-
-                <Space
-                    android:layout_width="4dp"
-                    android:layout_height="0dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/cloud_drive_usage"
-                    android:textColor="@color/colorOnSurfaceMedium"
-                    android:textSize="10sp"
-                    tools:ignore="SmallSp" />
 
                 <Space
                     android:layout_width="8dp"
@@ -72,7 +54,7 @@
                     android:layout_height="10dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/shape_round_dot"
-                    app:tint="@color/storageUsedTrackColor" />
+                    app:tint="@color/storageDriveUsedTrackColor" />
 
                 <Space
                     android:layout_width="4dp"
@@ -110,43 +92,25 @@
                     tools:ignore="SmallSp" />
             </LinearLayout>
 
-            <FrameLayout
+            <com.google.android.material.progressindicator.LinearProgressIndicator
                 android:id="@+id/indicator"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="28dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintTop_toBottomOf="@id/title">
-
-                <com.google.android.material.progressindicator.LinearProgressIndicator
-                    android:id="@+id/indicator_base"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:indicatorColor="@color/storageUsedTrackColor"
-                    app:trackColor="@color/storageTrackColor"
-                    app:trackCornerRadius="50dp"
-                    app:trackThickness="5dp"
-                    tools:progress="50" />
-
-                <com.google.android.material.progressindicator.LinearProgressIndicator
-                    android:id="@+id/indicator_self"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:indicatorColor="@color/storageDriveUsedTrackColor"
-                    app:trackColor="@android:color/transparent"
-                    app:trackCornerRadius="50dp"
-                    app:trackThickness="5dp"
-                    tools:progress="10" />
-
-            </FrameLayout>
+                app:indicatorColor="@color/storageDriveUsedTrackColor"
+                app:layout_constraintTop_toBottomOf="@id/title"
+                app:trackColor="@color/storageTrackColor"
+                app:trackCornerRadius="50dp"
+                app:trackThickness="4dp"
+                tools:progress="50" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="28dp"
                 android:layout_marginBottom="8dp"
                 android:gravity="center_vertical"
@@ -180,7 +144,7 @@
                         android:textColor="@color/colorOnSurfaceMedium"
                         android:textSize="10sp"
                         tools:ignore="SmallSp"
-                        tools:text="605 GB / 736 GB / 931 GB" />
+                        tools:text="736 GB / 931 GB" />
                 </LinearLayout>
 
                 <Space
